TRABALHO DE DS FEITO

--- a/appEquipe/CadastroFornecedor.xaml
+++ b/appEquipe/CadastroFornecedor.xaml
@@ -60,8 +60,7 @@
 
                         <Button Text="CADASTRAR-SE"
                                 BackgroundColor="LightPink"
-                                />
+                                Clicked="SalvaDados"/>
                     </StackLayout>
             </Grid>
-
 </ContentPage>
