--- a/appEquipe/CadastroCliente.xaml
+++ b/appEquipe/CadastroCliente.xaml
@@ -121,7 +121,7 @@
             <Button Grid.Row="9" 
                     Grid.ColumnSpan="2" 
                     Text="CADASTRO" 
-                    Clicked="OnSalvarDadosClicked"
+                    Clicked="QuandoSalvarDadosClicked"
                     TextColor="Black"
                     FontSize="18" 
                     BackgroundColor="White" 
